# OJ-Onlinejudge

./: .gitignore  .project  AGENTS.md  LICENSE  README.en.md  README.md  pom.xml
doc/: Seata分布式事务实施方案.md  hack-feature-design.md  微服务优化方向文档.md
docs/: OJ系统设计文档.md
oj-ai-python/: .env.example  .gitignore  Dockerfile  pyproject.toml
oj-ai-python/src/: config.py  deps.py  main.py
oj-ai-python/src/agent/: graph.py  state.py
oj-ai-python/src/agent/nodes/: _react.py  code_judge.py  knowledge.py  learning.py  router.py  solution.py  supervisor.py
oj-ai-python/src/agent/tools/: __init__.py  judge.py  learning.py  retrieval.py  solution.py
oj-ai-python/src/api/: router.py
oj-ai-python/src/api/admin/: knowledge.py
oj-ai-python/src/api/user/: agent.py  ai_judge.py
oj-ai-python/src/client/: gateway.py  judge.py  problem.py  user.py
oj-ai-python/src/core/: sse_token.py
oj-ai-python/src/core/memory/: chat.py  dialog.py  user_context.py
oj-ai-python/src/core/rag/: importer.py  retriever.py  store.py
oj-ai-python/tests/: conftest.py  test_api.py  test_rag.py
oj-ai-service/: .factorypath  pom.xml
oj-common/: .factorypath  pom.xml
oj-common-api/: .factorypath  pom.xml
oj-config/: .factorypath  .project  pom.xml
oj-contest-service/: .factorypath  pom.xml
oj-gateway/: .factorypath  pom.xml
oj-judge-service/: .factorypath  pom.xml
oj-pojo/: .factorypath  .project  pom.xml
oj-problem-service/: .factorypath  pom.xml
oj-user-service/: .factorypath  pom.xml
oj-vue-admin/: package-lock.json  package.json  vite.config.js
oj-vue-user/: README.md  (+3 more)
(+621 files in other folders)
